# Ferric-Trail

./: .gitignore  Cargo.toml
src/: main.rs
src/cli/: args.rs  command.rs
src/core/: file_list.rs  file_opener.rs  mod.rs  storage.rs
