[package]
name = "ferric-trail"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
opener = "0.8.2"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
owo-colors = "4.2.2"
tabled = "0.20.0"
strum = { version = "0.27.2", features = ["default"]}
strum_macros = "0.27.2"
chrono = "0.4.41"